templates/k3d-github/cluster-types/mgmt/components/argocd/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
    host: argocd.<DOMAIN_NAME>
  tls:
  - hosts:
      - argocd.<DOMAIN_NAME>
    secretName: argocd-tls
